--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     gltf-model="#animated-asset"
                     scale="0.0034598245177004626 0.0034598245177004626 0.0034598245177004626"
                     gps-entity-place="latitude: 40.2215126; longitude: -74.0029862;"
+                    light="type: ambient; intensity: 0.5;"></a-entity>
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
