--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="0.0034598245177004626 0.0034598245177004626 0.0034598245177004626"
+                    scale="2 2 2"
                     gps-entity-place="latitude: 40.1039954; longitude: -74.2296598;"
                     light="type: ambient; intensity: 0.5;"></a-entity>
                 ></a-entity>
