--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     gltf-model="#animated-asset"
                     scale="2 2 2"
                     gps-entity-place="latitude: 40.1039954; longitude: -74.2296598;"
-                    light="type: ambient; intensity: 0.5;"></a-entity>
+                    light="type: ambient; intensity: 0.5;">
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
