--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="1 1 1"
+                    scale="0.5 0.5 0.5"
                     gps-entity-place="latitude: 40.1039954; longitude: -74.2296598;"
-                    <a-light type="directional" position="0 0 0" rotation="-90 0 0" target="#directionaltarget">
-  <a-entity id="directionaltarget" position="0 0 -1"></a-entity>
-</a-light>">
+            light="type: directional; color: #EEE; intensity: 0.5" position="-1 1 0"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
