--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
                     gltf-model="#animated-asset"
                     scale="0.5 0.5 0.5"
                     gps-entity-place="latitude: 40.1039954; longitude: -74.2296598;"
-          light="intensity:3"
-                ></a-entity>
-
+                 ></a-entity>
+            
+  <a-entity light="type: ambient; intensity: 0.5;"></a-entity>
+            
             <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
     </body>
