--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <body style="margin: 0; overflow: hidden;">
         <a-scene
+               light="defaultLightsEnabled: false;"
+
             renderer="logarithmicDepthBuffer: true;"
             embedded
             loading-screen="enabled: false;"
