--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                     gps-entity-place="latitude: 40.1039954; longitude: -74.2296598;"
                  ></a-entity>
             
-
+<a-entity light="type: ambient; color: #BBB"></a-entity>
+<a-entity light="type: directional; color: #FFF; intensity: 0.6" position="-0.5 1 1"></a-entity>
             
             <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
