--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     gps-entity-place="latitude: 40.1039954; longitude: -74.2296598;"
                  ></a-entity>
             
-<a-entity light="color: #AFA; intensity: 1.5" position="-1 1 0"></a-entity>
+<a-entity light="type: spot; angle: 45"></a-entity>
             
             <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
