--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a-scene
             
 
-            renderer="logarithmicDepthBuffer: true;"
+            renderer="precision: medium;"
             embedded
             loading-screen="enabled: false;"
             arjs="sourceType: webcam; debugUIEnabled: false;"
