--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a-scene
             
 
-           renderer="sortObjects: true"
+           renderer="precision: mediump"
             embedded
             loading-screen="enabled: false;"
             arjs="sourceType: webcam; debugUIEnabled: false;"
