--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
         <a-scene
             
 
-           renderer="precision: mediump"
-            embedded
-            loading-screen="enabled: false;"
+           renderer="antialias: true;
+                   colorManagement: true;
+                   sortObjects: true;
+                   physicallyCorrectLights: true;
+            
+                   embedded loading-screen="enabled: false;"
             arjs="sourceType: webcam; debugUIEnabled: false;"
         >
             <a-assets>
