--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
            renderer="antialias: true;
                    colorManagement: true;
                    sortObjects: true;
-                   physicallyCorrectLights: true;
+                   physicallyCorrectLights: true;"
             
                    embedded loading-screen="enabled: false;"
             arjs="sourceType: webcam; debugUIEnabled: false;"
