--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                    colorManagement: true;
                    sortObjects: true;
                    physicallyCorrectLights: true;
-                    precision: low;"
+                    precision: medium;"
             
                    embedded loading-screen="enabled: false;"
             arjs="sourceType: webcam; debugUIEnabled: false;"
