--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                           light="type: spot; angle: 45"
                     gltf-model="#animated-asset"
                     scale="0.5 0.5 0.5"
-                    gps-entity-place="latitude: 40.1039954; longitude: -74.2296598;"
+                    gps-entity-place="latitude: 40.221475; longitude: -74.002997;"
                  ></a-entity>
             
 
